--- a/fashion-hub/.gitignore
+++ b/fashion-hub/.gitignore
@@ -7,18 +7,87 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Build outputs
 dist
 dist-ssr
+build
 *.local
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
 .idea
+*.swp
+*.swo
+*~
 .DS_Store
+
+# TypeScript
+*.tsbuildinfo
+*.pid
+*.seed
+*.pid.lock
+
+# Vite
+.vite
+vite.config.js.timestamp-*
+
+# Testing
+coverage
+.nyc_output
+*.lcov
+.jest/
+
+# ESLint cache
+.eslintcache
+
+# Prettier cache
+.prettiercache
+
+# Optional: Storybook build outputs (if you add Storybook later)
+storybook-static
+
+# Optional: Playwright/Puppeteer
+.playwright/
+test-results/
+playwright-report/
+
+# Misc
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# OS
+Thumbs.db
+.DS_Store
+
+# Temporary files
+*.tmp
+*.temp
+.cache
+
+# Optional: Deployment platforms
+.vercel
+.netlify
+.firebase
+.aws-sam
+
+# Optional: Package manager lock files (uncomment if you want to ignore them)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
