Simplify .gitignore: only ignore .env files

--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,5 @@
-# OS-specific files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-Desktop.ini
-
-# Editor directories and files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.project
-.classpath
-.settings/
-*.sublime-project
-*.sublime-workspace
-
-# Logs
-*.log
-logs/
-
-# Temporary files
-*.tmp
-*.temp
-.cache/
-
-# Environment variables
+# Environment variables - IGNORE ONLY .env files
 .env
 .env.local
 .env.*.local
-
-# Package manager files (keep package.json, ignore lock files if needed)
-# Uncomment if you want to ignore lock files
-# package-lock.json
-# yarn.lock
-# pnpm-lock.yaml
-
-# Build artifacts (if any at root level)
-build/
-dist/
-
-# Misc
-*.pid
-*.seed
-*.pid.lock
-
-# Optional: Deployment platforms
-.vercel
-.netlify
-.firebase
-.aws-sam
-
-# Optional: Package manager lock files (uncomment if you want to ignore them)
-# package-lock.json
-# yarn.lock
-# pnpm-lock.yaml
-
+.env.*
