--- a/fashion-hub/.gitignore
+++ b/fashion-hub/.gitignore
@@ -1,94 +1,7 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# Dependencies
-node_modules
-.pnp
-.pnp.js
-
-# Build outputs
-dist
-dist-ssr
-build
-*.local
-
-# Environment variables
+# Environment variables - IGNORE ONLY .env files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-!.vscode/settings.json
-.idea
-*.swp
-*.swo
-*~
-.DS_Store
-
-# TypeScript
-*.tsbuildinfo
-*.pid
-*.seed
-*.pid.lock
-
-# Vite
-.vite
-vite.config.js.timestamp-*
-
-# Testing
-coverage
-.nyc_output
-*.lcov
-.jest/
-
-# ESLint cache
-.eslintcache
-
-# Prettier cache
-.prettiercache
-
-# Optional: Storybook build outputs (if you add Storybook later)
-storybook-static
-
-# Optional: Playwright/Puppeteer
-.playwright/
-test-results/
-playwright-report/
-
-# Misc
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# OS
-Thumbs.db
-.DS_Store
-
-# Temporary files
-*.tmp
-*.temp
-.cache
-
-# Optional: Deployment platforms
-.vercel
-.netlify
-.firebase
-.aws-sam
-
-# Package manager lock files - KEEP THESE TRACKED (do not ignore)
-# These ensure consistent dependency versions across environments
-# package-lock.json  <- TRACKED (commented out = not ignored)
-# yarn.lock         <- TRACKED if using Yarn
-# pnpm-lock.yaml    <- TRACKED if using pnpm
+.env.*
